# babylm-seqlen

./: README.md  accelerate_config.yaml  hf_utils.py  main.py  mamba_utils.py  pyproject.toml  requirements.txt  setup.sh  train.py  utils.py
config/: _config.py  _constants.py
scripts/: launch_slurm.wilkes3
src/: callbacks.py  collator.py  hf_utils.py  mamba_utils.py
src/utils/: checkpointing.py
