[project]
name = "babylm-seqlen"
version = "0.1.0"
description = "Train language models on BabyLM with variable sequence lengths"
dependencies = [
    "transformers>=4.40.0",
    "datasets",
    "deepspeed",
    "torch",
    "accelerate",
    "wandb",
    "mamba-ssm @ git+https://github.com/state-spaces/mamba.git",
]